# quickemu_space

./: Cargo.toml  README.md  justfile
i18n/en/: quickemu_space.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  creation.rs  main.rs
src/creation/: download.rs  options.rs
